# tccoe22-hamr-sel4-only

./: .gitignore  readme.html  readme.md
temperature_control/: readme.html  readme.md
temperature_control/aadl/.slang/: TemperatureControl_TempControlSystem_i_Instance.json
temperature_control/aadl/diagrams/: TemperatureControl_TempControlSystem_i.aadl_diagram
temperature_control_FINAL/: readme.html  readme.md
temperature_control_FINAL/.metadata/.plugins/org.eclipse.core.resources/.projects/aadl/.indexes/7/: history.index
temperature_control_FINAL/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
temperature_control_FINAL/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
temperature_control_FINAL/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
temperature_control_FINAL/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
temperature_control_FINAL/.metadata/.plugins/org.eclipse.xtext.builder/: builder.state
temperature_control_FINAL/.metadata/.plugins/org.eclipse.xtext.ui/: dialog_settings.xml
temperature_control_FINAL/hamr/c/etc/: ipc.c
temperature_control_FINAL/hamr/c/etc_seL4/adapters/Fan_i_fp_fan/: Fan_i_fp_fan_adapter.c  Fan_i_fp_fan_adapter.h
temperature_control_FINAL/hamr/c/etc_seL4/adapters/TempControl_i_tcp_tempControl/: TempControl_i_tcp_tempControl_adapter.c  TempControl_i_tcp_tempControl_adapter.h
temperature_control_FINAL/hamr/c/etc_seL4/adapters/TempSensor_i_tsp_tempSensor/: TempSensor_i_tsp_tempSensor_adapter.c  TempSensor_i_tsp_tempSensor_adapter.h
temperature_control_FINAL/hamr/c/ext-c/: ext.c  ext.h
temperature_control_FINAL/hamr/c/ext-c/Fan_i_fp_fan/: Fan_i_fp_fan.c  Fan_i_fp_fan.h  Fan_i_fp_fan_api.c  Fan_i_fp_fan_api.h
temperature_control_FINAL/hamr/c/ext-c/TempControl_i_tcp_tempControl/: TempControl_i_tcp_tempControl.c  TempControl_i_tcp_tempControl.h  TempControl_i_tcp_tempControl_api.c  TempControl_i_tcp_tempControl_api.h
temperature_control_FINAL/hamr/c/ext-c/TempSensor_i_tsp_tempSensor/: TempSensor_i_tsp_tempSensor.c  TempSensor_i_tsp_tempSensor.h  TempSensor_i_tsp_tempSensor_api.c  TempSensor_i_tsp_tempSensor_api.h
temperature_control_FINAL/hamr/c/ext-schedule/: round_robin.c  static_scheduler.c
temperature_control_FINAL/hamr/c/nix/: CMakeLists.txt  sizes.txt  typemap.properties
temperature_control_FINAL/hamr/c/nix/app-Fan_i_fp_fan_App/: Fan_i_fp_fan_App.c
temperature_control_FINAL/hamr/c/nix/app-LegacyDemo/: LegacyDemo.c
temperature_control_FINAL/hamr/c/nix/app-TempControl_i_tcp_tempControl_App/: TempControl_i_tcp_tempControl_App.c
temperature_control_FINAL/hamr/c/nix/app-TempSensor_i_tsp_tempSensor_App/: TempSensor_i_tsp_tempSensor_App.c
temperature_control_FINAL/hamr/c/nix/runtime/: all.c  all.h  type-composite.h  types.c  types.h
temperature_control_FINAL/hamr/camkes/components/Fan_i_fp_fan/src/: sb_Fan_i.c
temperature_control_FINAL/hamr/camkes/components/TempControl_i_tcp_tempControl/src/: sb_TempControl_i.c
temperature_control_FINAL/hamr/camkes/components/TempSensor_i_tsp_tempSensor/src/: sb_TempSensor_i.c
temperature_control_FINAL/hamr/camkes/kernel/: domain_schedule.c
temperature_control_FINAL/hamr/slang/: build.sbt  build.sc  versions.properties
temperature_control_FINAL/hamr/slang/src/main/architecture/t/: Arch.scala  Demo.scala  ScheduleProvider.scala  Schedulers.scala
temperature_control_FINAL/hamr/slang/src/main/bridge/t/TemperatureControl/: Fan_i_Api.scala  Fan_i_fp_fan_Bridge.scala  TempControl_i_Api.scala  TempControl_i_tcp_tempControl_Bridge.scala  TempSensor_i_Api.scala  TempSensor_i_tsp_tempSensor_Bridge.scala
temperature_control_FINAL/hamr/slang/src/main/component/t/: TranspilerToucher.scala
temperature_control_FINAL/hamr/slang/src/main/component/t/TemperatureControl/: Fan_i_fp_fan.scala  TempControl_i_tcp_tempControl.scala  TempSensor_i_tsp_tempSensor.scala
temperature_control_FINAL/hamr/slang/src/main/data/t/: Base_Types.scala
temperature_control_FINAL/hamr/slang/src/main/inspector/t/: InspectorDemo.scala
temperature_control_FINAL/hamr/slang/src/main/nix/t/: ArtNix.scala  Fan_i_fp_fan_App.scala  IPC.scala  LegacyDemo.scala  Platform.scala  PlatformNix.scala  Platform_Ext.scala  Process.scala  Process_Ext.scala  SharedMemory.scala  SharedMemory_Ext.scala  TempControl_i_tcp_tempControl_App.scala  TempSensor_i_tsp_tempSensor_App.scala
temperature_control_FINAL/hamr/slang/src/test/util/t/: BridgeTestSuite.scala
temperature_control_seL4_Only/: readme.md
temperature_control_seL4_Only/aadl/.slang/: TemperatureControl_TempControlSystem_i_Instance.json
temperature_control_seL4_Only/aadl/behavior_code/components/: tempSensor.c
temperature_control_seL4_Only/aadl/diagrams/: TemperatureControl_TempControlSystem_i.aadl_diagram
temperature_control_seL4_Only/hamr-sel4-only/camkes/: CMakeLists.txt  TempControlSystem_i_Instance.camkes
temperature_control_seL4_Only/hamr-sel4-only/camkes/components/Fan_i_fp_fan/: Fan_i_fp_fan.camkes
temperature_control_seL4_Only/hamr-sel4-only/camkes/components/Fan_i_fp_fan/includes/: sb_Fan_i.h
temperature_control_seL4_Only/hamr-sel4-only/camkes/components/Fan_i_fp_fan/src/: fan.c  sb_Fan_i.c
temperature_control_seL4_Only/hamr-sel4-only/camkes/components/TempControl_i_tcp_tempControl/: TempControl_i_tcp_tempControl.camkes
temperature_control_seL4_Only/hamr-sel4-only/camkes/components/TempControl_i_tcp_tempControl/includes/: sb_TempControl_i.h
temperature_control_seL4_Only/hamr-sel4-only/camkes/components/TempControl_i_tcp_tempControl/src/: sb_TempControl_i.c  tempControl.c
temperature_control_seL4_Only/hamr-sel4-only/camkes/components/TempSensor_i_tsp_tempSensor/: TempSensor_i_tsp_tempSensor.camkes
temperature_control_seL4_Only/hamr-sel4-only/camkes/components/TempSensor_i_tsp_tempSensor/includes/: sb_TempSensor_i.h
temperature_control_seL4_Only/hamr-sel4-only/camkes/components/TempSensor_i_tsp_tempSensor/src/: sb_TempSensor_i.c  tempSensor.c
temperature_control_seL4_Only/hamr-sel4-only/camkes/kernel/: domain_schedule.c
(+21 files in other folders)
